Added Login requirement and organization

--- a/CommunityHelp/index.html
+++ b/CommunityHelp/index.html
@@ -11,6 +11,7 @@
         <script src="communityHelp.js"></script>
     </head>
     <body>
+        <button onclick="goToShulSchedules()">Go To Shul Schedules</button>
         <main id="main-content"></main>
         <button onclick="$('#addCategoryPopup').show();">Add Category</button>
         <div id="addCategoryPopup">
