Added Events CMS

--- a/CommunityHelp/index.html
+++ b/CommunityHelp/index.html
@@ -12,6 +12,7 @@
     </head>
     <body>
         <button onclick="goToShulSchedules()">Go To Shul Schedules</button>
+        <button onclick="goToEvents()">Go To Events Editor</button>
         <main id="main-content"></main>
         <button onclick="$('#addCategoryPopup').show();">Add Category</button>
         <div id="addCategoryPopup">
