--- a/ShulSchedules/index.html
+++ b/ShulSchedules/index.html
@@ -12,6 +12,7 @@
     </head>
     <body>
         <button onclick="goToCommunityHelp();">Go To Community Help Editor</button>
+        <button onclick="goToEventsEditor();">Go To Events Editor</button>
         <main>
             
         </main>
