Tests to resolve https still

--- a/Home/index.html
+++ b/Home/index.html
@@ -18,8 +18,8 @@
                 </tr>
             </table>
         </header>
-        <iframe src="https://scaappcms.github.io/ShulSchedules" id="ShulSchedules-iframe" frameborder="0"></iframe>
-        <iframe src="https://scaappcms.github.io/CommunityHelp" id="CommunityHelp-iframe" style="display: none;" frameborder="0"></iframe>
-        <iframe src="https://scaappcms.github.io/Events" id="Events-iframe" style="display: none;" frameborder="0"></iframe>
+        <iframe src="./ShulSchedules/index.html" id="ShulSchedules-iframe" frameborder="0"></iframe>
+        <iframe src="/CommunityHelp.index.html" id="CommunityHelp-iframe" style="display: none;" frameborder="0"></iframe>
+        <iframe src="./Events" id="Events-iframe" style="display: none;" frameborder="0"></iframe>
     </body>
 </html>
