keep trying till It happens

--- a/Home/index.html
+++ b/Home/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>SCA App CMS</title>
-        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+        <meta https-equiv="Content-Type" content="text/html;charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="homeStyles.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -18,8 +18,8 @@
                 </tr>
             </table>
         </header>
-        <iframe src="./ShulSchedules/index.html" id="ShulSchedules-iframe" frameborder="0"></iframe>
-        <iframe src="/CommunityHelp.index.html" id="CommunityHelp-iframe" style="display: none;" frameborder="0"></iframe>
-        <iframe src="./Events" id="Events-iframe" style="display: none;" frameborder="0"></iframe>
+        <iframe src="/ShulSchedules/" id="ShulSchedules-iframe" frameborder="0"></iframe>
+        <iframe src="/CommunityHelp/" id="CommunityHelp-iframe" style="display: none;" frameborder="0"></iframe>
+        <iframe src="/Events/" id="Events-iframe" style="display: none;" frameborder="0"></iframe>
     </body>
 </html>
