--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 		<title>SCA App CMS Login</title>
-		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+		<meta https-equiv="Content-Type" content="text/html;charset=UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="login.css">
 		<script src="https://www.gstatic.com/firebasejs/5.2.0/firebase.js"></script>
