--- a/Events/index.html
+++ b/Events/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Events</title>
-        <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+        <meta https-equiv="Content-Type" content="text/html;charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="eventStyles.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
