Changed 'Shul' to 'Synagogue' .. everywhere that its visible

--- a/Home/index.html
+++ b/Home/index.html
@@ -12,13 +12,13 @@
         <header>
             <table>
                 <tr>
-                    <td><button class="opened" id="ShulSchedules" onclick="changeTo('ShulSchedules')">Shul Schedules</button></td>
+                    <td><button class="opened" id="ShulSchedules" onclick="changeTo('ShulSchedules')">Synagogue Schedules</button></td>
                     <td><button id="CommunityHelp" onclick="changeTo('CommunityHelp')">Community Help</button></td>
                     <td><button id="Events" onclick="changeTo('Events')">Events</button></td>
                 </tr>
             </table>
         </header>
-        <iframe src="/ShulSchedules/" id="ShulSchedules-iframe" frameborder="0"></iframe>
+        <iframe src="/SynagogueSchedules/" id="ShulSchedules-iframe" frameborder="0"></iframe>
         <iframe src="/CommunityHelp/" id="CommunityHelp-iframe" style="display: none;" frameborder="0"></iframe>
         <iframe src="/Events/" id="Events-iframe" style="display: none;" frameborder="0"></iframe>
     </body>
